--- a/drone_deploy/src/app/app.component.html
+++ b/drone_deploy/src/app/app.component.html
@@ -1,1 +1,5 @@
-tadija pederu
+simple angular app which build files are deployed through Drone CI/CD pipeline.<br/>
+Copyright &copy; <a href="https://github.com/theend7" target="_blank">Darko Vulicevic</a><br/>
+All rights reserved.
+
+
