--- a/drone_deploy/src/app/app.component.html
+++ b/drone_deploy/src/app/app.component.html
@@ -1,5 +1,3 @@
-simple angular app which build files are deployed through Drone CI/CD pipeline.<br/>
-Copyright &copy; <a href="https://github.com/theend7" target="_blank">Darko Vulicevic</a><br/>
-All rights reserved.
+<h1 style="text-align: center;">Postovani Dragane, postoji laksi nacin da se resi ovaj nesporazum, samo pristanite da coveku pored vas budete kum!</h1>
 
 
