--- a/drone_deploy/src/app/app.component.html
+++ b/drone_deploy/src/app/app.component.html
@@ -1,3 +1,3 @@
-<h1 style="text-align: center;">Postovani Dragane, postoji laksi nacin da se resi ovaj nesporazum, samo pristanite da coveku pored vas budete kum!</h1>
+<h1 style="text-align: center;">This project is a simple Angular application with a CI/CD pipeline set up using Drone. </h1>
 
 
